--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -114,9 +114,9 @@ body {
 }
 
 /* Monitoring sayfası stili */
-#systemMetrics, 
-#logs, 
-#deploySection, 
+#systemMetrics,
+#logs,
+#deploySection,
 #monitorChartContainer {
   background: #fff;
   padding: 15px;
@@ -143,7 +143,7 @@ body {
 
 .progress {
   height: 100%;
-  background: #36A2EB;
+  background: #36a2eb;
   width: 0;
   transition: width 1s;
 }
